# ASPLOS-26-AE

./: .gitignore  .gitmodules  README.md  amd_docker_link_torch.sh  analyze_memory_usage.py  calculate_end_to_end_overhead.py  calculate_kernel_only_overhead.py  fig10.py  fig11.py  fig9.py  pyproject.toml  rebuttal_test_results.csv  run_ablation_kernel_time.sh  run_asan_test.sh  run_baseline_memory.sh  run_triton_sanitizer_memory.sh  runner.py  start_docker_rocm_asan.sh
analysis/: analyze_ablation_kernel_time.py  analyze_kernel_time.py  calculate_ablation_speedup.py
end_to_end/: run_address_sanitizer.py  run_address_sanitizer_amd.py  run_baseline.py  run_baseline_amd.py  run_compute_sanitizer.py  run_triton_sanitizer.py
setup_amd/: install_triton.sh  mini.hip  reproduce_mini_hip.sh  start_docker_rocm_asan_interactive.sh
utils/: __init__.py  flag_gems_whitelist.txt  liger_kernel_whitelist.txt  misc.py  test_registry.py  tritonbench_whitelist.txt
