[project]
name = "env-freeze"
version = "0.0.0"
description = "Recreated environment pinned from site-packages"
requires-python = ">=3.10,<3.11"

dependencies = [
  "aiofiles==24.1.0",
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "anytree==2.13.0",
  "boto==2.49.0",
  "certifi==2025.1.31",
  "cfgv==3.4.0",
  "chalk-diagrams==0.2.2",
  "chalk-planar==0.4",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "colour==0.1.5",
  "distlib==0.3.9",
  "exceptiongroup==1.2.2",
  "fastapi==0.115.12",
  "ffmpy==0.5.0",
  "filelock==3.18.0",
  "fsspec==2025.3.2",
  "gradio==5.27.0",
  "gradio_client==1.9.0",
  "groovy==0.1.2",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "huggingface-hub==0.30.2",
  "idna==3.10",
  "importlib-metadata==8.6.1",
  "iniconfig==2.1.0",
  "Jinja2==3.1.6",
  "MarkupSafe==3.0.2",
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "mpmath==1.3.0",
  "networkx==3.4.2",
  "nodeenv==1.9.1",
  "numpy==2.2.5",
  "orjson==3.10.16",
  "packaging==25.0",
  "pandas==2.2.3",
  "pillow==11.2.1",
  "platformdirs==4.3.7",
  "pluggy==1.5.0",
  "pre-commit==4.2.0",
  "pydantic==2.11.3",
  "pydantic-core==2.33.1",
  "pydub==0.25.1",
  "Pygments==2.19.1",
  "PyYAML==6.0.2",
  "pytest==8.3.5",
  "python-dateutil==2.9.0.post0",
  "python-multipart==0.0.20",
  "pytz==2025.2",
  "pyarrow==19.0.1",
  "regex==2024.11.6",
  "requests==2.32.3",
  "rich==14.0.0",
  "ruff==0.11.7",
  "safetensors==0.5.3",
  "safehttpx==0.1.6",
  "semantic-version==2.10.0",
  "shellingham==1.5.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "starlette==0.46.2",
  "svgwrite==1.4.3",
  "tokenizers==0.21.1",
  "tomli==2.2.1",
  "tomlkit==0.13.2",
  "toolz==1.0.0",
  "torch==2.8.0",
  "transformers==4.51.3",
  "triton==3.4.0",
  "triton-viz",
  "typing-extensions==4.13.2",
  "typing-inspection==0.4.0",
  "tzdata==2025.2",
  "urllib3==2.4.0",
  "uvicorn==0.34.2",
  "virtualenv==20.30.0",
  "websockets==15.0.1",
  "z3-solver==4.14.1.0",
  "zipp==3.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.uv.sources]
triton-viz = { path = "./submodules/triton-viz", editable=true}
